force-app/main/default/objects/EligibleCounty__c/EligibleCounty__c.object-meta.xml
<CustomObject>
    <description>Object to store Eligible county list. Customer belong to eligible county can start application</description>
    <label>Eligible County</label>
    <nameField>
        <label>Eligible County Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eligible Counties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>