force-app/main/default/objects/EligibleCounty__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City of the county</description>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>