force-app/main/default/objects/EligibleCounty__c/fields/Postalcode__c.field-meta.xml
<CustomField>
    <fullName>Postalcode__c</fullName>
    <description>Postal code  of the territory</description>
    <label>Postal code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>