force-app/main/default/objects/EligibleCounty__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>State name</description>
    <label>State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>